fixes wrapping on on tab items with long words (https://lab.civicrm.org/extensions/riverlea/-/issues/10)

--- a/core/css/_base.css
+++ b/core/css/_base.css
@@ -84,6 +84,7 @@
 .ui-tabs .ui-tabs-nav li {
     border: 0;
     background: transparent;
+    white-space: unset;
 }
 
 /******************
